# online-cinema

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
commands/: initialize_app.sh  initialize_prod.sh
configs/nginx/: .htpasswd  nginx.conf
src/: main.py
src/celery_apps/: __init__.py  celery_config.py  email_tasks.py  notification_app.py  utils.py
src/celery_apps/scheduler/: task_scheduler.py
src/config/: dependencies.py  settings.py
src/database/: __init__.py  database.py  database_postgres.py  database_sqlite.py
src/database/migrations/: env.py
src/database/models/: cart_models.py  movie_models.py  order_models.py  payment_models.py  token_models.py  user_models.py
src/decorators/: custom_decorators.py
src/exceptions/: __init__.py
src/notifications/: email.py  interfaces.py
src/notifications/templates/: activation_complete.html  activation_request.html  notification.html  password_reset_complete.html  password_reset_request.html
src/routers/: movies.py
src/routes/: carts.py  docs.py  movies.py  orders.py  payments.py  users.py  utils.py
src/schemas/: __init__.py  carts.py  movies.py  orders.py  payments.py  users.py  validators.py
src/security/: dependenices.py  token_manager.py  utils.py
src/tests/: conftest.py  utils.py
src/tests/celery/: test_schedulers.py  test_tasks.py
src/tests/email/: test_email_sender.py
src/tests/routes/: test_auth.py  test_carts.py  test_docs.py  test_movies.py  test_orders.py  test_payments.py
(+7 files in other folders)
